--- a/map_pins.html
+++ b/map_pins.html
@@ -3,27 +3,33 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
-        function myFunction() {
-            console.log("u");
+        function closeMapdescription() {
+            var list = jQuery(".mapwrapper .map_container .mapdescription");
+            list.hide();
         }
 
         $(document).ready(function () {
             console.log("ready!");
 
             $(".map_container").on('click', function (e) {
-                var tar = jQuery(e.target)
-
+                //hide all mapdescription
+                closeMapdescription();
+                //get selected element
+                var tar = jQuery(e.target);
+                //check if selected element is <a/>
                 if (tar.is("a")) {
-                    var asdf = tar.parent().closest("middle");
-                    var ele = jQuery("#other");
-                    ele.show();
+                    //get predecessor element of <a/>
+                    var preElement = tar.prev()
+                    //convert to jQuery so we can call css,hide,show...
+                    var ele = jQuery(preElement);
+                    ele.css("background-color", "blue");
+                    ele.css("visibility", "visible");
+                    ele.show(); 
                 }
 
 
             });
-
         });
-
     </script>
 
 
@@ -297,7 +303,7 @@
             left: 20%;
         }
 
-        .middle {
+        .mapdescription {
             top: 50%;
             left: 50%;
             background-color: red;
@@ -313,9 +319,9 @@
     <div class="map_container">
         <img src="euromap_ohne.png" />
 
-        <div class="middle">pin1</div>
+        <div class="mapdescription">pin1</div>
         <a href="#" id="pin1" class="pin"></a>
-        <div class="middle">pin2</div>
+        <div class="mapdescription">pin2</div>
         <a href="#" id="pin2" class="pin"></a>
         <!-- <a href="#" id="pin3" class="pin"></a>
         <a href="#" id="pin4" class="pin"></a>
